2002-07-02  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din (__fpclassifyd): Add symbol.
	(__fpclassifyf): Ditto.
	(__signbitd): Ditto.
	(__signbitf): Ditto.

2002-07-02  Corinna Vinschen  <corinna@vinschen.de>

	* security.h (DONT_INHERIT): Eliminate definition.
	(INHERIT_ALL): Ditto.
	(INHERIT_ONLY): Ditto.
	* sec_acl.cc: Use appropriate defines from accctrl.h instead of the
	above throughout.
	* security.cc: Ditto.

2002-07-01  Pierre Humblet  <pierre.humblet@ieee.org>

	* syscalls.c (seteuid32): Return immediately if the program is not
	impersonated and both uid and gid are original.
	(setegid32): Return immediately if the new gid is the current egid.

2002-07-01  Christopher Faylor  <cgf@redhat.com>

	* syscalls.cc (seteuid32): Fix incorrect placement of Pierre's patch
	below.

2002-07-01  Christopher Faylor  <cgf@redhat.com>

	* syscalls.cc (seteuid32): Fix incorrect use of system_printf.

2002-07-02  Christopher January  <chris@atomice.net>

	* autoload.cc (GetSecurityInfo): Define new autoload function.
	(RegQueryInfoKeyA): Ditto.
	* fhandler.h (fhandler_virtual::fill_filebuf): Change return type to
	bool.
	(fhandler_proc::fill_filebuf): Ditto.
	(fhandler_registry::fill_filebuf): Ditto.
	(fhandler_process::fill_filebuf): Ditto.
	(fhandler_registry::value_name): Add new member.
	(fhandler_registry::close): Add new method.
	(fhandler_process::p): Remove member.
	* fhandler_proc.cc (fhandler_proc::open): Add set_nohandle after
	calling superclass method.  Check return value of fill_filebuf.
	(fhandler_proc::fill_filebuf): Change return type to bool.  Add return
	statement.
	* fhandler_process.cc (fhandler_process::open): Add set_nohandle after
	calling superclass method.  Remove references to p.  Check return value
	of fill_filebuf.
	(fhandler_process::fill_filebuf): Change return type to bool.  Don't
	use dereference operator on p.  Add return statement.
	(fhandler_process::format_process_stat): Fix typo.